# ci

./: .gitignore
task1/: task.cpp
task2/: run.conf  task.cpp
task2/include/interface/: Dayable.h  Printable.h
task2/include/model/: Book.h  Library.h
task2/include/model/reader/: CarelessReader.h  GreadyReader.h  GreedyReader.h  NormalReader.h  Reader.h
task2/src/interface/: Dayable.cpp  Printable.cpp
task2/src/model/: Book.cpp  Library.cpp
task2/src/model/reader/: CarelessReader.cpp  GreadyReader.cpp  GreedyReader.cpp  NormalReader.cpp  Reader.cpp
task3/: demo.h  iterator.h  main.cpp  theset.h
task4/Task4/: CMakeLists.txt  export10.txt  export11.txt  export12.txt  export13.txt  export14.txt  export15.txt  export2.txt  export3.txt  export4.txt  export5.txt  export6.txt  export7.txt  export9.txt  main.cpp  mainwindow.ui  students.txt  students1.txt  students2.txt
task4/Task4/model/: ILoggable.cpp  ILoggable.h  Query.cpp  Query.h  Student.cpp  Student.h
task4/Task4/repository/: InMemoryRepository.cpp  InMemoryRepository.h  SubjectsRepository.cpp  SubjectsRepository.h
task4/Task4/service/: FileReader.cpp  FileReader.h  Finder.cpp  Finder.h  Logger.cpp  Logger.h  Saver.cpp  Saver.h
task4/Task4/ui/view/filterwindow/: filterwindow.cpp  filterwindow.h  filterwindow.ui
task4/Task4/ui/view/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
task4/Task4/ui/view/resultwindow/: resultwindow.cpp  resultwindow.h  resultwindow.ui
task4/Task4/ui/view/studentwindow/: studentwindow.cpp  studentwindow.h  studentwindow.ui
task4/Task4/viewmodel/: BaseViewModel.cpp  BaseViewModel.h  FilterViewModel.cpp  FilterViewModel.h  MainViewModel.cpp  MainViewModel.h  ResultViewModel.cpp  ResultViewModel.h  StudentViewModel.cpp  StudentViewModel.h
